--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "papaparse": "^5.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
